// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardKebabMenuButtonTest copies failure details and show the toast 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
  <Toast onTimeout={[Function: onTimeout]} deps={{...}} timeoutLength={1000}>
    Failure details copied.
  </Toast>
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with allCardInteractionsSupported 2`] = `
Object {
  "calloutProps": Object {
    "className": "kebabMenuCallout",
  },
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "iconProps": Object {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "name": "File issue",
      "onClick": [Function],
    },
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "name": "Copy failure details",
      "onClick": [Function],
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardKebabMenuButtonTest renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
</div>"
`;

exports[`CardKebabMenuButtonTest renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported 2`] = `
Object {
  "calloutProps": Object {
    "className": "kebabMenuCallout",
  },
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "name": "Copy failure details",
      "onClick": [Function],
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardKebabMenuButtonTest should click file issue, invalid settings 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={true} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</div>"
`;

exports[`CardKebabMenuButtonTest should file issue, valid settings 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
</div>"
`;

exports[`CardKebabMenuButtonTest shows failure message if copy failed 1`] = `
"<div>
  <CustomizedActionButton className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" onRenderMenuIcon={[Function]} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function]} issueFilingServicePropertiesMap={{...}} />
  <Toast onTimeout={[Function: onTimeout]} deps={{...}} timeoutLength={1000}>
    Failed to copy failure details. Please try again.
  </Toast>
</div>"
`;
